CLion configuration bug fixed
Took 50 seconds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.17)
-project(DCP5301___DSA_FInal_Project)
+project(DCP5301___DSA_Final_Project)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(DCP5301___DSA_FInal_Project
+add_executable(DCP5301___DSA_Final_Project
         .idea/.gitignore
         .idea/.name
-        ".idea/DCP5301 - DSA FInal Project.iml"
+        ".idea/DCP5301 - DSA Final Project.iml"
         .idea/discord.xml
         .idea/modules.xml
         .idea/vcs.xml
